[gd_scene load_steps=21 format=3 uid="uid://bswedeqrbn6hc"]

[ext_resource type="Script" path="res://scrips/leve_ws.gd" id="2_4bm2s"]
[ext_resource type="Texture2D" uid="uid://kqw3yhr1u5sy" path="res://lightmask.png" id="3_h4m8n"]
[ext_resource type="Texture2D" uid="uid://e5mhjlf3ca8" path="res://assets/worlds/world_1/Sprite-0005.png" id="3_ose6j"]
[ext_resource type="Texture2D" uid="uid://deyfj6vo3alxh" path="res://assets/controls.png" id="5_uta8e"]
[ext_resource type="Texture2D" uid="uid://bs7ucjxthiqrs" path="res://assets/worlds/world_1/Sprite-0004.png" id="6_6hdcn"]
[ext_resource type="Theme" uid="uid://qbghq2o1iiep" path="res://dEFAULT.tres" id="6_folv1"]
[ext_resource type="Shader" path="res://esenas/wordls/level_selector.gdshader" id="7_fi3il"]

[sub_resource type="Animation" id="Animation_lvrpp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:activo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("125SinTítulo20240706154852:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.25, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("125SinTítulo20240706154852:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-136, -88.8799)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/HBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/HBoxContainer2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yhyue"]
resource_name = "abrir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:activo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("125SinTítulo20240706154852:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4.25, 1e-05), Vector2(4.25, 4.91), Vector2(4.25, 3.48)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("125SinTítulo20240706154852:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-130, -88.88), Vector2(-130, -343.4), Vector2(-130, -252.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/HBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/HBoxContainer2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_gheo3"]
resource_name = "cerrar"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("125SinTítulo20240706154852:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.775, 2.775), Vector2(4.8, 5), Vector2(2.775, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("125SinTítulo20240706154852:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-124, -296.94), Vector2(-224, -509.04), Vector2(-116, -129.28)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/HBoxContainer2/Control/Controls:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foa4y"]
_data = {
"RESET": SubResource("Animation_lvrpp"),
"abrir": SubResource("Animation_yhyue"),
"cerrar": SubResource("Animation_gheo3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_74l26"]
radius = 46.1771

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fk16v"]
size = Vector2(45, 12.07)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pnvft"]
shader = ExtResource("7_fi3il")
shader_parameter/time = 0.0
shader_parameter/custom_resolution = Vector2(100, 100)

[sub_resource type="QuadMesh" id="QuadMesh_o73qo"]

[sub_resource type="Gradient" id="Gradient_j258c"]
offsets = PackedFloat32Array(0.234234, 0.495495, 0.711712, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o5j6v"]
gradient = SubResource("Gradient_j258c")
fill = 1
fill_from = Vector2(0.497143, 0.554286)
repeat = 2

[sub_resource type="Animation" id="Animation_6n62v"]
resource_name = "0.5"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance2D:material:shader_parameter/time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.57]
}

[sub_resource type="Animation" id="Animation_qs3n7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance2D:material:shader_parameter/time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rur2a"]
_data = {
"0.5": SubResource("Animation_6n62v"),
"RESET": SubResource("Animation_qs3n7")
}

[node name="level_selector" type="Node2D"]
self_modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
position = Vector2(-1.90735e-06, -3.8147e-06)
scale = Vector2(4, 3.9604)
script = ExtResource("2_4bm2s")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(9.53674e-07, 2.02)
scale = Vector2(0.222603, 0.22699)
energy = 0.25
texture = ExtResource("3_h4m8n")
texture_scale = 3.65

[node name="125SinTítulo20240706154852" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(-136, -88.8799)
scale = Vector2(4.25, 1e-05)
texture = ExtResource("3_ose6j")
centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(4.76837e-07, -321.18)

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
visible = false
z_index = 7
offset_left = -68.0
offset_top = 147.46
offset_right = 591.0
offset_bottom = 245.46
scale = Vector2(0.236448, 0.245805)
theme = ExtResource("6_folv1")
alignment = 1

[node name="Button" type="Button" parent="Node2D/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = " Normal "

[node name="Button2" type="Button" parent="Node2D/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "   Hard    "
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D"]
visible = false
z_index = 7
offset_left = -68.0
offset_top = 147.46
offset_right = 591.0
offset_bottom = 245.46
scale = Vector2(0.236448, 0.245805)
theme = ExtResource("6_folv1")
alignment = 1

[node name="Control" type="Label" parent="Node2D/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 201
text = "   "

[node name="Controls" type="Sprite2D" parent="Node2D/HBoxContainer2/Control"]
z_index = 5
position = Vector2(76.2534, 182.011)
scale = Vector2(5.06405, 5.17354)
texture = ExtResource("5_uta8e")
hframes = 5
vframes = 4

[node name="Control2" type="Label" parent="Node2D/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 211
text = "    "

[node name="Controls" type="Sprite2D" parent="Node2D/HBoxContainer2/Control2"]
z_index = 5
position = Vector2(175.219, 197.229)
scale = Vector2(5.89423, 5.61913)
texture = ExtResource("5_uta8e")
hframes = 5
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_foa4y")
}
speed_scale = 2.0

[node name="Label" type="Label" parent="."]
z_index = 5
offset_left = -96.0
offset_top = -240.38
offset_right = 728.0
offset_bottom = 38.6203
scale = Vector2(0.247348, 0.253432)
theme = ExtResource("6_folv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 96
text = "aracnophobia"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.76837e-07, 9.6321e-07)
shape = SubResource("CircleShape2D_74l26")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, 4.015)
shape = SubResource("RectangleShape2D_fk16v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -8.07999)
scale = Vector2(1.875, 1.82562)
texture = ExtResource("6_6hdcn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_pnvft")
position = Vector2(572, 336)
scale = Vector2(1160, 688)
mesh = SubResource("QuadMesh_o73qo")
texture = SubResource("GradientTexture2D_o5j6v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_rur2a")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
